# pydres

./: .coveragerc  LICENSE  README.md  pyproject.toml
.github/workflow/: publish-to-pypi.yml
.github/workflows/: publish-to-pypi.yml
pydres/: __init__.py  main.py  regexp.py
simple_dependency_resolver/: __init__.py  const.py  main.py  regexp.py
tests/: test_main.py
