[tool.poetry]
name = "pydres"
version = "0.1.2"
description = "A simple dependency resolver"
authors = ["TomohiroHiratsuka"]
readme = "README.md"
packages = [
    { include = "pydres", from = "." }
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
